<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashbg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fishgame_features.presentation.GameOverFragment">


    <TextView
        android:id="@+id/gameOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="70dp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:padding="10dp"
        android:text="@string/score"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameOver"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/play_again_btn_holder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:padding="10dp"
        android:text="@string/play_again"
        app:cardElevation="4dp"
        app:cardCornerRadius="15dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/score_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/main_gradiant"
            android:orientation="vertical">
            <TextView
                android:id="@+id/play_again_btn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="22dp"
                android:padding="10dp"
                android:text="Play again?"
                android:gravity="center"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gameOver"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"
        android:layout_height="0dp"/>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/yes_button"
        app:cardElevation="4dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/play_again_btn_holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textAlignment="center"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30dp"
            android:background="@drawable/main_gradiant"/>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no_button"
        app:cardElevation="4dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/play_again_btn_holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="30dp"
            android:background="@drawable/main_gradiant"/>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>