<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".dashboard.ui.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/header_banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/gbanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/webview_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_banner">

        <RelativeLayout
            android:id="@+id/rl_1"
            style="@style/MatchParent"
            android:layout_marginStart="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeable_card_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_gradiant"
                app:shapeAppearance="@style/strat_image" />

            <TextView
                android:id="@+id/strat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.1"
                android:shadowColor="@color/black"
                android:shadowRadius="2"
                android:text="@string/website"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/web_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:src="@drawable/mabaitnashark" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/privacy_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/webview_card">

        <RelativeLayout
            android:id="@+id/rl_2"
            style="@style/MatchParent"
            android:layout_marginStart="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeable_card_image1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_gradiant"
                app:shapeAppearance="@style/strat_image" />

            <TextView
                android:id="@+id/privacy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.1"
                android:shadowColor="@color/black"
                android:shadowRadius="2"
                android:text="@string/privacy_policy"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/privacy_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:src="@drawable/octopus" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/game_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/privacy_card">

        <RelativeLayout
            android:id="@+id/rl_3"
            style="@style/MatchParent"
            android:layout_marginStart="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeable_card_image2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_gradiant"
                app:shapeAppearance="@style/strat_image" />

            <TextView
                android:id="@+id/game_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.1"
                android:shadowColor="@color/black"
                android:shadowRadius="2"
                android:text="@string/mini_game"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/game_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:src="@drawable/lantern" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/navbar"
            android:contentDescription="@null"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/game_card" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>